Update code to resource a VPC endpoint interacting with the S3

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
 # Local .terraform directories
 **/.terraform/*
 
+# Local web files
+*/static-web-eg/*
+*/website_content/*
+
 # .tfstate files
 *.tfstate
 *.tfstate.*
