Update code to resource a VPC endpoint interacting with the S3

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@
 **/.terraform/*
 
 # Local web files
-*/static-web-eg/*
-*/website_content/*
+**/static-web-eg/*
+**/website_content/*
 
 # .tfstate files
 *.tfstate
